--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half"><h1> Welcome To</h1>
             <h1> <span class="mal">Tanjimul Islam</span> World!</h1>
             <h3> A little more about Tanjimul </h3>
